<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_toast"
                android:onClick="showToast"
                android:id="@+id/btnToast"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView android:layout_width="match_parent"
                  app:layout_constraintTop_toBottomOf="@id/btnToast"
                  android:hint="Input A"
                  android:layout_margin="@dimen/dp10"
                  android:id="@+id/txtInputA" android:layout_height="wrap_content"/>

        <EditText android:layout_width="match_parent"
                  app:layout_constraintTop_toBottomOf="@id/txtInputA"
                  android:hint="0" android:layout_margin="@dimen/dp5"
                  android:inputType="number"
                  android:maxLines="1"
                  android:id="@+id/etInputA" android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  app:layout_constraintTop_toBottomOf="@id/etInputA"
                  android:hint="Input B"
                  android:layout_margin="@dimen/dp10"
                  android:id="@+id/txtInputB" android:layout_height="wrap_content"/>

        <EditText android:layout_width="match_parent"
                  app:layout_constraintTop_toBottomOf="@id/txtInputB"
                  android:hint="0"
                  android:inputType="number"
                  android:maxLines="1"
                  android:layout_margin="@dimen/dp5"
                  android:id="@+id/etInputB" android:layout_height="wrap_content"/>

        <Button android:layout_width="wrap_content"
                android:text="@string/add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnMax"
                android:onClick="sum"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@id/etInputB"
                android:id="@+id/btnAdd" android:layout_height="wrap_content" android:focusable="true"/>

        <Button android:layout_width="wrap_content"
                android:text="@string/max_from_above_values"
                app:layout_constraintStart_toEndOf="@id/btnAdd"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="max"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@id/etInputB"
                android:id="@+id/btnMax" android:layout_height="wrap_content" android:focusable="true"/>

        <TextView android:layout_width="match_parent"
                  app:layout_constraintTop_toBottomOf="@id/btnAdd"
                  android:hint="Result"
                  android:layout_margin="@dimen/dp10"
                  android:id="@+id/txtResult" android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  app:layout_constraintTop_toBottomOf="@id/btnPrint"
                  android:layout_margin="@dimen/dp10"
                  android:visibility="visible"
                  android:id="@+id/txtStrings" android:layout_height="wrap_content"/>

        <Button android:layout_width="wrap_content"
                android:text="@string/print_strings_from_array"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="printStrings"
                app:layout_constraintStart_toStartOf="parent"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@id/txtResult"
                android:id="@+id/btnPrint" android:layout_height="wrap_content" android:focusable="true"/>

        <Button android:layout_width="wrap_content"
                android:text="@string/open_list_items_screen"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="openListScreen"
                app:layout_constraintStart_toStartOf="parent"
                android:clickable="true"
                app:layout_constraintTop_toBottomOf="@id/btnPrint"
                android:id="@+id/btnRecyclerView" android:layout_height="wrap_content" android:focusable="true"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>